--- a/Blatt3/src/TaskC/tC.css
+++ b/Blatt3/src/TaskC/tC.css
@@ -1,6 +1,4 @@
 .circle{
-    width: 50px;
-    height: 50px;
     border-radius:50px;
     font-size:20px;
     color:#33ff39 ;
@@ -9,9 +7,12 @@
 }
 
 .button {
+    position: absolute;
+    top: 50px;
+    left: 200px;
     display: block;
-    width: 115px;
-    height: 25px;
+    width: 200px;
+    height: 50px;
     background: #4E9CAF;
     padding: 10px;
     text-align: center;
