--- a/Blatt3/src/TaskC/tC.css
+++ b/Blatt3/src/TaskC/tC.css
@@ -1,22 +1,27 @@
 .circle{
+    width: 100px;
+    height: 100px;
     border-radius:50px;
     font-size:20px;
     color:#33ff39 ;
     line-height:100px;
+    text-align: center;
     background:#33ff39
+
 }
 
-.button {
-    position: absolute;
-    top: 50px;
-    left: 200px;
-    display: block;
-    width: 200px;
-    height: 50px;
-    background: #4E9CAF;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
